<resources>
    <string name="app_name">ScanLogin</string>
    <string name="module_description">Automatic confirmation login by scanning QRCode security login to QQ/TIM, and WeChat</string>
    <string name="module_loaded_failed">Module loaded failed</string>
    <string name="module_loaded_success">Module loaded success</string>
    <string name="module_status">模块状态</string>
    <string name="module_setting_title">功能选项，需重启相应App</string>
    <string name="module_setting_second"><![CDATA[(设置->应用->TIM/QQ/微信->强行停止)]]></string>
    <string name="module_setting_icon">是否显示图标</string>
    <string name="module_setting_wechat">微信确认登录</string>
    <string name="module_setting_qq_tim">QQ/TIM允许登录</string>
    <string name="module_setting_web_qq">网页腾讯业务确认登录</string>
    <string name="module_setting_weico">微博国际版确认登录</string>
    <string name="module_setting_bili">哔哩哔哩确认登录</string>
    <string name="module_setting_weibo">微博确认登录</string>
    <string name="module_setting_taobao">淘宝确认登录</string>
    <string name="module_setting_jingdong">京东确认登录</string>
    <string name="restart_qq_tim">设置成功，重启QQ/TIM后生效</string>
    <string name="restart_wechat">设置成功，重启微信后生效</string>
    <string name="restart_weico">设置成功，重启微博国际版后生效</string>
    <string name="restart_bili">设置成功，重启哔哩哔哩后生效</string>
    <string name="restart_weibo">设置成功，重启微博后生效</string>
    <string name="restart_taobao">设置成功，重启淘宝后生效</string>
    <string name="restart_jingdong">设置成功，重启京东后生效</string>
</resources>
