<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/module_status"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/moduleStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/module_loaded_failed"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/module_setting_title"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/module_setting_second"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <Switch
        android:id="@+id/iconVisibility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/module_setting_icon"/>

    <Switch
        android:id="@+id/weChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/module_setting_wechat"/>

    <Switch
        android:id="@+id/timQQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/module_setting_qq_tim"/>

    <Switch
        android:id="@+id/webQQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/module_setting_web_qq"/>

    <Switch
        android:id="@+id/weico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/module_setting_weico"/>

</LinearLayout>
